2003-02-11 Simon Waters <Simon@wretched.demon.co.uk>

	* Drop enpassant knowledge on "switch" command.

2003-02-05 Simon Waters <Simon@wretched.demon.co.uk>

	* Various string length issues tidied up.

2003-01-31 Simon Waters <Simon@wretched.demon.co.uk>

	* Implement "white" and "black" commands.

2003-01-29 Anil Mungal <vagrancy@rogers.com>

	* Two minor optimisations to eval.c (1% speed-up test evalspeed)

2003-01-29 Simon Waters <Simon@wretched.demon.co.uk>

	* Use getopt_long for option handling

	* Add standard options --help --version

	* Add command line command "usage"

	* Add option --hashsize

	* Rework hint to use first move in Tree

	* GetElapse time even when not against the clock

	* Modify aclocal.m4 to stop spurious 32's in configure
	  which break build AIX 4.2, and Solaris 2.5.1 

2003-01-27 Simon Waters <Simon@wretched.demon.co.uk>

	* Stop output of result in iterate if game has ended already.

	* Ensure PGNSaveGame output computer as correct colour player.

2003-01-13 Simon Waters <Simon@wretched.demon.co.uk>

	* Add time.h to common.h to define timeval on Cygwin

	* Add test for absence of nanosleep, may make
	  waiting inefficient on platforms without nanosleep
	  or usleep

	* Remain in analysis mode on "new".

2003-01-09 Simon Waters <Simon@wretched.demon.co.uk>

	* Implement analysis mode

	* Change time in ShowLine to seconds from centiseconds
	  (see engine-intf.html at www.tim-mann.org)

2003-01-09  Lukas Geyer  <lukas@debian.org>

	* rename et ElapsedTime
	
	* Clean up timer code

	* Further changes on pondering and input handling

2003-01-09 Simon Waters <Simon@wretched.demon.co.uk>

	* Change version ID to 5.06

2002-12-30  Lukas Geyer  <lukas@debian.org>

	* Corrected threading code to consume input correctly

	* Corrections to comments

	* debug.c added

2002-12-22  Stuart Cracraft <cracraft@earthlink.net>

	* Reinstate penalty for having no queens on in
	  eval.c (spotted by Tim Bedding)
