@@ -1,0 +1,1 @@
+3N2nk/5n2/3N2K1/8/8/8/8/8 w - - bm N8xf7# N6xf7# ; "Not King takes"
